<resources>
    <string name="app_name">CS160_Final_Project</string>
    <string name="CREATE">create</string>
    <string name="the_end">the end</string>
    <string name="save">save?</string>
    <string name="_00_00">00:00</string>
    <string name="tiny_tales">tiny tales</string>
    <string name="subheading">creative storytelling for young children</string>
    <string name="title">title:</string>
    <string name="done">done</string>
    <string name="listen">listen</string>
    <string name="add_photos">add your photos</string>
    <string name="random">pick a starting image or a random one</string>
    <string name="record">press record and begin your story</string>
    <string name="swipe">swipe to turn page</string>
    <string name="tap">tap to continue...</string>

    <string name="action_settings">Settings</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
    <string name="filler_title">story title</string>
    <string name="rename">rename</string>
    <string name="delete">delete</string>

</resources>