<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".RecordingActivity">

    <ImageView
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/home_icon" />

    <TextView
        android:id="@+id/theEndTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/the_end"
        android:textAlignment="center"
        android:textColor="#393A3C"
        android:textSize="48sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/swipeInfoMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/swipe_to_turn"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/currentlyDisplayedImg"
            android:layout_width="380dp"
            android:layout_height="380dp"
            android:alpha=".5"
            android:src="@drawable/story_filler_1" />

        <LinearLayout
            android:id="@+id/statusBars"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/statusBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/status_tabs" />

            <ImageView
                android:id="@+id/statusBar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/status_tabs" />

            <ImageView
                android:id="@+id/statusBar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/status_tabs" />

            <ImageView
                android:id="@+id/statusBar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/status_tabs" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:background="@drawable/footer_bar"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <ImageView
            android:id="@+id/startRecordingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/record_button" />

        <ImageView
            android:id="@+id/stopRecordingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/stop_button"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:background="@drawable/record_time_background">

            <TextView
                android:id="@+id/stopwatchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/_00_00" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/popup_background"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/saveTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/save"
            android:textAlignment="center"
            android:textSize="36sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/confirm"
                android:layout_width="118dp"
                android:layout_height="118dp"
                android:layout_margin="12dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="18dp"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/checkmark" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cancel"
                android:layout_width="118dp"
                android:layout_height="118dp"
                android:layout_margin="12dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="18dp"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/cancel" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>