<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListenActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/listen_page_header_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/createTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/listen"
                android:textAlignment="center"
                android:textColor="#393A3C"
                android:textSize="64sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:src="@drawable/listen_tab_cat" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="418dp"
            android:layout_marginTop="-40dp"
            android:paddingTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/videoGrid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foregroundGravity="center_horizontal"
                    android:padding="10dp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/confirmationPopup"
        android:layout_width="318dp"
        android:layout_height="262dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/popup_background"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/confirm"
                android:layout_width="118dp"
                android:layout_height="118dp"
                android:layout_margin="12dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="18dp"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/checkmark" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cancel"
                android:layout_width="118dp"
                android:layout_height="118dp"
                android:layout_margin="12dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="18dp"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/cancel" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/renamePopup"
        android:layout_width="318dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/popup_background"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/title"
                android:textColor="#393A3C"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/titleTextEdit"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:imeOptions="actionDone"
                android:inputType="textShortMessage"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp" />

        </LinearLayout>

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="95dp"
            android:background="@drawable/title_done_button"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal|top"
            android:paddingTop="3dp"
            android:text="@string/done"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="36sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/footer_bar"
        android:gravity="center"
        android:paddingStart="72dp"
        android:paddingTop="5dp"
        android:paddingEnd="41dp">

        <ImageView
            android:id="@+id/createTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:alpha=".5"
            android:src="@drawable/create_tab" />

        <ImageView
            android:id="@+id/listenTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/listen_tab" />
    </RelativeLayout>
</RelativeLayout>